# whisperwrapper

./: .gitignore  DEBUGGING_GUIDE.md  FINAL_INSTRUCTIONS.md  GETTING_STARTED_GUI.md  GUI_SUMMARY.md  HOTKEY_DAEMON_README.md  LICENSE  MULTI_OS_ARCHITECTURE.md  Makefile  NEXT_STEPS_PLAN.md  PROPER_SETUP.md  README.md  REFACTORING_SUMMARY.md  REFACTOR_STATUS.md  RUNNING_THE_DAEMON.md  SETUP_GUI.md  TEST_HOTKEY.md  VENV_SYSTEMD_SETUP.md  WHISPER_GUI_README.md  check_real_session.py  claude_integration.py  comprehensive_debug.py  debug_hotkey.py  debug_key_events.py  event_type_checker.py  inject_hotkey.py  install.sh  integration_example.py  pyproject.toml  raw_event_monitor.py  requirements.txt  run_daemon.sh  setup.sh  setup_autostart.sh  setup_venv_systemd.sh  simple_hotkey_test.py  test_hotkey_capture.py  whisper-gui-autostart.desktop  whisper-gui.desktop  whisper-gui.service  (+6 more)
.githooks/: commit-msg  install-git-hooks.sh  pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support.md
_archive/: ARCHITECTURE_SUMMARY.md  CLI_Architecture_Analysis.md  DOCUMENTATION_INDEX.md  Process_Communication_Flows.md  QUICK_REFERENCE.txt
config/systemd/: whisper-gui.service  whisper-hotkey-daemon.service
docs/: CONTRIBUTING.md  GETTING_STARTED_GUI.md  GUI_SUMMARY.md  QUICK_START.md  README.old.md  SETUP_GUI.md  SHORTCUT_SETUP.md  SYSTEM_TRAY_SETUP.md  TDD_REFACTORING_SUMMARY.md  TESTING_AND_REFACTORING_PLAN.md  TEST_FIXTURE_GUIDE.md  WAYLAND_SETUP.md  WHISPER_GUI_README.md
proposals/: 001_fix_fifo_blocking_behavior.md  002_enhanced_hotkey_detection.md  TEMPLATE.md
scripts/: launch_gui.sh  setup.py  setup_hotkey.sh  setup_venv_systemd.sh  whisper  whisper-hotkey-daemon  whisper-recording-toggle
src/whisper_app/: __init__.py  __main__.py  cli.py  command_bus.py  config.py  dbus_controller.py  fifo_controller.py  gui.py  hotkey_daemon.py  ipc_controller.py  replacements.py  vocab.py  wrapper.py
src/whisper_app/controllers/: __init__.py  recording_controller.py
src/whisper_app/gui/: __init__.py  actions.py  config.py  history_view.py  main_window.py  presenter.py  project_sidebar.py  projects.py  ui.py  utils.py
tests/: __init__.py  conftest.py  helpers.py  test_cli.py  test_cli_runner.py  test_codex_worker.py  test_command_bus_and_fifo.py  test_config_helpers.py  test_daemon_live.sh  test_dbus_controller.py  test_fifo_controller.py  test_fifo_read_loop.py  test_gui.py  test_gui_config.py  test_gui_helpers.py  test_hotkey_backend.py  test_ipc_controller.py  test_main_window.py  test_presenter.py  test_recording_controller.py  test_services.py
tests/integration/: test_cli_end_to_end.py  test_gui_smoke.py  test_whisper_backend.py
(+9 files in other folders)
